@@ -1,3 +1,7 @@
+ClipIt-1.4.1-20110525001 - 25 May. 2011
+
+	+ Fixed: Changed history file to new type.
+
 ClipIt-1.4.1-20110524001 - 24 May. 2011
 
 	+ Fixed: Converted history to new data type.
